--- a/Html_urmaps/style.css
+++ b/Html_urmaps/style.css
@@ -17,7 +17,7 @@
     font-family: "Varela Round", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #ffffff;
+    color: #F2F2F2;
 }
 
 /* Estilo para el boton del Lenguje */
@@ -34,7 +34,7 @@
 .btn-secondary {
     background-color: #666363; 
     border-color: #666363; 
-    color: #ffffff; 
+    color: #F2F2F2; 
 }
 
 .dropdown-menu{
@@ -46,5 +46,115 @@
 }
 
 ul.dropdown-menu li a {
-    color: #ffffff !important;
+    color: #F2F2F2 !important;
+}
+
+/* Config Aside */
+aside {
+    text-align: center;
+    width: 7%;
+    height: 100%;
+    background-color: #BA0620;
+    position: absolute;
+}
+
+/* Espaciado entre botones*/ 
+.Button {
+    margin-top: 60%;
+    position: relative;
+    background-color: #BA0620;
+}
+
+/* Desplejable de las opciones*/ 
+.Button .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #666363;
+    min-width: 150%;
+    left: 120%; 
+    top: 0%; 
+}
+
+/* Deplejable para todas las opciones que pueda tener un boton */ 
+.Button .dropdown-content a {
+    display: block;
+    padding: 7%;
+    text-decoration: none;
+    color: #F2F2F2;
+    
+}
+
+/* Color del fondo al pasar el cursor sobre la opcion disponible */ 
+.Button .dropdown-content a:hover {
+    background-color: #666363;
+}
+
+/* Funcionalidad para que solamente se despliguen las opciones al dar click */ 
+.Button .btn:focus + .dropdown-content {
+    display: block; 
+}
+
+/* Espaciado entre el boton final y los otros */ 
+.Boton_final {
+    margin-top: 200%;
+}
+
+/* Config de los botones */ 
+.Button_config {
+    background-color: #BA0620; 
+    border-color: #BA0620; 
+    color: #F2F2F2; 
+}
+
+----------------------
+/* imagen "mapa" */
+menu {
+    text-align: center;
+    background-color: #F2F2F2;
+    position: absolute;
+}
+
+.centered-image {
+    text-align: center;
+    margin-top: 1%;
+    margin-left: 45%;
+}
+
+.centered-image img {
+    max-width: 100%;
+    height: auto;
+}
+
+.content-wrapper {
+    display: flex;
+    flex-direction: column; 
+}
+
+/* aqui es todo lo de los botones */
+.search-social {
+    text-align: right; /* Alinea los elementos a la derecha */
+    margin-top: 2%;
+}
+
+.search-social input {
+    width: auto; 
+    margin-right: 2%; 
+}
+
+.social-icons {
+    display: inline-block; 
+}
+
+.social-icons .btn {
+    margin: 0.5%; 
+    background-color: transparent; 
+    border: none; 
+}
+
+.social-icons .btn img {
+    width: 5%; 
+    height: auto;
+    border-radius: 50%; 
+    background-color: #D6D6D6; 
+    padding: 1%; 
 }
