--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -123,6 +123,7 @@ menu {
 .centered-image img {
     max-width: 100%;
     height: auto;
+    min-width: 200px;
 }
 
 .content-wrapper {
@@ -158,3 +159,52 @@ menu {
     background-color: #D6D6D6; 
     padding: 8px; 
 }
+
+--------
+#map-container {
+    position: relative;
+    width: 100%;
+    height: auto; /* Allow the container to adjust its height based on the image */
+}
+
+.map-image {
+    width: 100%;
+    height: auto; /* Ensure the image maintains its aspect ratio */
+}
+
+#pathForm {
+    position: absolute;
+    bottom: 20px; /* Adjust the distance from the bottom as needed */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f8f9fa; /* Light background color */
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow effect */
+}
+
+/* Styles for form elements */
+#pathForm form {
+    display: flex;
+    flex-direction: column;
+}
+
+#pathForm label,
+#pathForm select,
+#pathForm button {
+    margin-bottom: 10px;
+}
+
+#pathForm button {
+    background-color: #007bff; /* Example color */
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#pathForm button:hover {
+    background-color: #0056b3; /* Example color on hover */
+}
+
