--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -228,3 +228,16 @@ menu {
 #pathForm button:hover {
     background-color: #0056b3; 
 }
+
+----------
+
+/*style for carousel*/
+
+
+
+#carouselExample .carousel-inner .carousel-item img {
+    max-width: 100%;
+    height: auto;
+    max-height: 200px; /* Adjust as needed */
+}
+
