--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -67,6 +67,7 @@ aside {
     height: 100%;
     background-color: #BA0620;
     position: fixed;
+    z-index: 100;
 }
 
 .container-fluid {
@@ -296,3 +297,24 @@ menu {
 #pathForm button:hover {
     background-color: #e20d2d; /* Example color on hover */
 }
+
+
+/*styles for carousel*/
+
+#carouselExample {
+    margin-left: 7%;
+    z-index: 20;
+}
+
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-item {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure images maintain aspect ratio and cover the entire carousel item */
+}
+
