--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -1,252 +1,237 @@
+/* General Styles */
 
+/* Path */
 #path {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    position: absolute; /* Position the path element absolutely */
+    top: 0; /* Align to the top */
+    left: 0; /* Align to the left */
+    width: 100%; /* Take full width of the viewport */
+    height: 100%; /* Take full height of the viewport */
 }
 
-/* Estilo general para el header*/
+/* Header Styles */
+
+/* Navigation Title */
 .Nav-titulo {
-    background-color: #666363; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: #666363; /* Set background color */
+    display: flex; /* Use flexbox for layout */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
 }
 
 .Nav-titulo .navbar-brand {
-    margin: 0; 
-    text-align: center;
-    position: absolute;
-    left: 50%; 
-    top: 2%;
-    transform: translateX(-50%);
-    font-size: 40px;
-    font-family: "Varela Round", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: #F2F2F2;
+    margin: 0; /* Reset margin */
+    text-align: center; /* Center text */
+    position: absolute; /* Position absolutely */
+    left: 50%; /* Center horizontally */
+    top: 2%; /* Slightly offset from the top */
+    transform: translateX(-50%); /* Adjust for centering */
+    font-size: 40px; /* Set font size */
+    font-family: "Varela Round", sans-serif; /* Set font family */
+    font-weight: 400; /* Set font weight */
+    font-style: normal; /* Set font style */
+    color: #F2F2F2; /* Set text color */
 }
 
-/* Estilo para el boton del Lenguje */
+/* Dropdown Styles */
 .dropdown-center {
-    position: absolute;
-    top: 25px;
-    right: 40px;
-    background-color: #666363;
-    width: 70px;
-    height: 50px;
-    font-size: 25px;
+    position: absolute; /* Position absolutely */
+    top: 25px; /* Offset from the top */
+    right: 40px; /* Offset from the right */
+    background-color: #666363; /* Set background color */
+    width: 70px; /* Set width */
+    height: 50px; /* Set height */
+    font-size: 25px; /* Set font size */
 }
 
 .btn-secondary {
-    background-color: #666363; 
-    border-color: #666363; 
-    color: #F2F2F2; 
+    background-color: #666363; /* Set background color */
+    border-color: #666363; /* Set border color */
+    color: #F2F2F2; /* Set text color */
 }
 
-.dropdown-menu{
-    background-color: #666363;
-    font-size: 16px; 
-    min-width: 600px; 
-    max-height: 50px; 
-    overflow-y: auto;
+.dropdown-menu {
+    background-color: #666363; /* Set background color */
+    font-size: 16px; /* Set font size */
+    min-width: 600px; /* Set minimum width */
+    max-height: 50px; /* Set maximum height */
+    overflow-y: auto; /* Enable vertical overflow scrolling */
 }
 
 ul.dropdown-menu li a {
-    color: #F2F2F2 !important;
+    color: #F2F2F2 !important; /* Set text color for dropdown items */
 }
 
-/* Config Aside */
+/* Aside Styles */
+
+/* Sidebar */
 aside {
-    text-align: center;
-    width: 7%;
-    min-width: 60px; /* Ancho mínimo de 60px */
-    max-width: 15%; /* Ancho máximo relativo al tamaño de la pantalla */
-    height: 100%;
-    background-color: #BA0620;
-    position: fixed;
+    text-align: center; /* Center text */
+    width: 7%; /* Set width */
+    min-width: 60px; /* Set minimum width */
+    max-width: 15%; /* Set maximum width */
+    height: 100%; /* Take full height */
+    background-color: #BA0620; /* Set background color */
+    position: fixed; /* Position fixed */
 }
 
 .container-fluid {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Arrange children in a column */
+    height: 100%; /* Take full height */
 }
 
-/* Estilo para los botones dentro del aside */
+/* Button Styles */
 .Button {
-    width: 100%; 
-    padding: 10px 0; 
+    width: 100%; /* Take full width */
+    padding: 10px 0; /* Set padding */
+    margin-top: 35px; /* Add top margin */
+    position: relative; /* Position relative */
+    background-color: #ba0620; /* Set background color */
 }
 
-/* Estilo para los botones dentro del aside */
 .Button .btn {
-    width: 70%; 
-    height: auto; 
-    margin: 0 auto; 
-    display: block; 
+    width: 70%; /* Set width */
+    height: auto; /* Set height */
+    margin: 0 auto; /* Center horizontally */
+    display: block; /* Make it a block element */
 }
 
-/* Estilo para las imágenes dentro de los botones */
 .Button img {
-    width: 100%; 
-    height: auto; 
+    width: 100%; /* Set width */
+    height: auto; /* Set height */
 }
 
-/* Espaciado entre botones*/ 
-.Button {
-    margin-top: 35px;
-    position: relative;
-    background-color: #BA0620;
-}
-
-/* Desplejable de las opciones*/ 
 .Button .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #666363;
-    top: 100%;
-    min-width: 160px;
-    left: calc(100% + 10px); /* Posiciona el desplegable a la derecha del botón con un margen de 10px */
-    top: calc(20% + 10px); /* Posiciona el desplegable debajo del botón, puedes ajustar el 10px según sea necesario */
+    display: none; /* Hide dropdown content by default */
+    position: absolute; /* Position absolutely */
+    background-color: #666363; /* Set background color */
+    min-width: 160px; /* Set minimum width */
+    left: calc(100% + 10px); /* Position relative to button */
+    top: calc(20% + 10px); /* Position relative to button */
 }
 
-/* Deplejable para todas las opciones que pueda tener un boton */ 
 .Button .dropdown-content a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: #F2F2F2;
-    
+    display: block; /* Display as block */
+    padding: 10px; /* Set padding */
+    text-decoration: none; /* Remove underline */
+    color: #f2f2f2; /* Set text color */
 }
 
-/* Color del fondo al pasar el cursor sobre la opcion disponible */ 
 .Button .dropdown-content a:hover {
-    background-color: #666363;
+    background-color: #666363; /* Set background color on hover */
 }
 
-/* Funcionalidad para que solamente se despliguen las opciones al dar click */ 
 .Button .btn:focus + .dropdown-content {
-    display: block; 
+    display: block; /* Display dropdown content on focus */
 }
 
-/* Espaciado entre el boton final y los otros */ 
 .Boton_final {
-    margin-top: 140px;
+    margin-top: 140px; /* Add top margin */
 }
 
-/* Config de los botones */ 
 .Button_config {
-    background-color: #BA0620; 
-    border-color: #BA0620; 
-    color: #F2F2F2; 
-}   
-
-----------------------
-/* imagen "mapa" */
-
-
-
-.content-wrapper {
-    display: flex;
-    flex-direction: column; 
+    background-color: #ba0620; /* Set background color */
+    border-color: #ba0620; /* Set border color */
+    color: #f2f2f2; /* Set text color */
 }
 
-/* aqui es todo lo de los botones */
+/* Content Styles */
+
+/* Content Wrapper */
+.content-wrapper {
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Arrange children in a column */
+}
+
+/* Search and Social */
 .search-social {
-    text-align: right; /* Alinea los elementos a la derecha */
-    margin-top: 20px;
+    text-align: right; /* Align text to the right */
+    margin-top: 20px; /* Add top margin */
 }
 
 .search-social input {
-    width: auto; 
-    margin-right: 10px; 
+    width: auto; /* Set width to auto */
+    margin-right: 10px; /* Add right margin */
 }
 
 .social-icons {
-    display: inline-block; 
+    display: inline-block; /* Display inline block */
 }
 
 .social-icons .btn {
-    margin: 0.5px; 
-    background-color: transparent; 
-    border: none; 
+    margin: 0.5px; /* Set margin */
+    background-color: transparent; /* Set background color to transparent */
+    border: none; /* Remove border */
 }
 
 .social-icons .btn img {
-    width: 40px; 
-    height: 40px;
-    border-radius: 50%; 
-    background-color: #D6D6D6; 
-    padding: 8px; 
+    width: 40px; /* Set width */
+    height: 40px; /* Set height */
+    border-radius: 50%; /* Make it round */
+    background-color: #d6d6d6; /* Set background color */
+    padding: 8px; /* Set padding */
 }
 
---------
+/* Form Styles */
 
-
-#path{
-    position: relative;
-}
-
+/* Path Form */
 #pathForm {
-    position: absolute;
-    top: 100%; /* Posición desde la parte inferior del botón */
-    left: 80%;
-    transform: translateX(-50%);
-    background-color: #F2F2F2;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow effect */
+    position: absolute; /* Position absolutely */
+    top: 100%; /* Position relative to button */
+    left: 80%; /* Offset from the left */
+    transform: translateX(-50%); /* Center horizontally */
+    background-color: #f2f2f2; /* Set background color */
+    padding: 15px; /* Set padding */
+    border-radius: 8px; /* Set border radius */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
 }
 
 #formContainer {
-    display: block;
+    display: block; /* Display as block */
 }
 
-/* Styles for form elements */
-
 #pathForm form {
-    display: flex;
-    flex-direction: column;
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Arrange children in a column */
 }
 
 #pathForm label,
 #pathForm select,
 #pathForm button {
-    margin-bottom: 10px;
+    margin-bottom: 10px; /* Add bottom margin */
 }
 
 #pathForm button {
-    background-color: #BA0620; /* Example color */
-    color: #fff;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
+    background-color: #ba0620; /* Set background color */
+    color: #fff; /* Set text color */
+    border: none; /* Remove border */
+    padding: 8px 16px; /* Set padding */
+    border-radius: 4px; /* Set border radius */
+    cursor: pointer; /* Change cursor to pointer */
 }
 
 #pathForm button:hover {
-    background-color: #e20d2d; /* Example color on hover */
+    background-color: #e20d2d; /* Change background color on hover */
 }
 
+/* Carousel Styles */
 
-
+/* Carousel */
 #carouselExample {
-    margin-top: 10%;
-    margin-left: 7%;
-    z-index: 20;
+    margin-top: 10%; /* Add top margin */
+    margin-left: 7%; /* Add left margin */
+    z-index: 20; /* Set z-index */
 }
 
 .carousel-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
+    position: relative; /* Set position relative */
+    width: 100%; /* Take full width */
+    height: 100%; /* Take full height */
 }
 
 .carousel-item {
-    width: 100%;
-    height: 100%;
+    width: 100%; /* Take full width */
+    height: 100%; /* Take full height */
     object-fit: cover; /* Ensure images maintain aspect ratio and cover the entire carousel item */
 }
