--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -13,10 +13,25 @@
 
 /* Navigation Title */
 .Nav-titulo {
-    background-color: #666363; /* Set background color */
+    background-color: #250000; /* Set background color */
     display: flex; /* Use flexbox for layout */
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
+    height:130px;
+    min-height: 90px; 
+
+}
+
+.imgU{
+margin-top: 15px;
+margin-left: 10px
+}
+
+.URLOGO{
+    text-align: center;
+    position: absolute;
+    margin-left: -110px;
+
 }
 
 .Nav-titulo .navbar-brand {
@@ -36,31 +51,36 @@
 /* Dropdown Styles */
 .dropdown-center {
     position: absolute; /* Position absolutely */
-    top: 25px; /* Offset from the top */
+    top: 40px; /* Offset from the top */
     right: 40px; /* Offset from the right */
-    background-color: #666363; /* Set background color */
+    background-color: #250000; /* Set background color */
     width: 70px; /* Set width */
     height: 50px; /* Set height */
     font-size: 25px; /* Set font size */
 }
 
 .btn-secondary {
-    background-color: #666363; /* Set background color */
-    border-color: #666363; /* Set border color */
+    background-color: #250000; /* Set background color */
+    border-color: #250000; /* Set border color */
     color: #F2F2F2; /* Set text color */
 }
 
 .dropdown-menu {
-    background-color: #666363; /* Set background color */
+    background-color: #250000; /* Set background color */
     font-size: 16px; /* Set font size */
-    min-width: 600px; /* Set minimum width */
+    min-width: 60px; /* Set minimum width */
     max-height: 50px; /* Set maximum height */
     overflow-y: auto; /* Enable vertical overflow scrolling */
 }
+.dropdown-center:hover .dropdown-menu {
+    background-color: #250000; /* Set background color when dropdown is triggered */
+}s
+
 
 ul.dropdown-menu li a {
-    color: #F2F2F2 !important; /* Set text color for dropdown items */
+    color: #F2F2F2 !important; /* Set text color for dropdown items */ 
 }
+
 
 /* Aside Styles */
 
@@ -109,7 +129,7 @@ aside {
 .Button .dropdown-content {
     display: none; /* Hide dropdown content by default */
     position: absolute; /* Position absolutely */
-    background-color: #666363; /* Set background color */
+    background-color: #250000; /* Set background color */
     min-width: 160px; /* Set minimum width */
     left: calc(100% + 10px); /* Position relative to button */
     top: calc(20% + 10px); /* Position relative to button */
@@ -124,7 +144,7 @@ aside {
 }
 
 .Button .dropdown-content a:hover {
-    background-color: #666363; /* Set background color on hover */
+    background-color: #250000; /* Set background color on hover */
 }
 
 .Button .btn:focus + .dropdown-content {
