--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -14,12 +14,8 @@
 /* Navigation Title */
  .Nav-titulo {
     background-color: #250000; /* Set background color */
-    background-color: #666363; /* Set background color */
-     display: flex; /* Use flexbox for layout */
      display: flex; /* Use flexbox for layout */
      justify-content: center; /* Center horizontally */
-     justify-content: center; /* Center horizontally */
-     align-items: center; /* Center vertically */
      align-items: center; /* Center vertically */
     height:130px;
     min-height: 90px; 
@@ -54,24 +50,24 @@ margin-left: 10px
 /* Dropdown Styles */
 .dropdown-center {
     position: absolute; /* Position absolutely */
-    top: 25px; /* Offset from the top */
+    top: 40px; /* Offset from the top */
     right: 40px; /* Offset from the right */
-    background-color: #666363; /* Set background color */
+    background-color: #250000; /* Set background color */
     width: 70px; /* Set width */
     height: 50px; /* Set height */
     font-size: 25px; /* Set font size */
 }
 
 .btn-secondary {
-    background-color: #666363; /* Set background color */
-    border-color: #666363; /* Set border color */
+    background-color: #250000; /* Set background color */
+    border-color: #250000; /* Set border color */
     color: #F2F2F2; /* Set text color */
 }
 
 .dropdown-menu {
-    background-color: #666363; /* Set background color */
+    background-color: #250000; /* Set background color */
     font-size: 16px; /* Set font size */
-    min-width: 600px; /* Set minimum width */
+    min-width: 60px; /* Set minimum width */
     max-height: 50px; /* Set maximum height */
     overflow-y: auto; /* Enable vertical overflow scrolling */
 }
@@ -127,7 +123,7 @@ aside {
 .Button .dropdown-content {
     display: none; /* Hide dropdown content by default */
     position: absolute; /* Position absolutely */
-    background-color: #666363; /* Set background color */
+    background-color: #250000; /* Set background color */
     min-width: 160px; /* Set minimum width */
     left: calc(100% + 10px); /* Position relative to button */
     top: calc(20% + 10px); /* Position relative to button */
@@ -142,7 +138,7 @@ aside {
 }
 
 .Button .dropdown-content a:hover {
-    background-color: #666363; /* Set background color on hover */
+    background-color: #250000; /* Set background color on hover */
 }
 
 .Button .btn:focus + .dropdown-content {
@@ -211,9 +207,12 @@ aside {
 #pathList {
     list-style-type: none; /* Remove list bullet points */
     padding: 0; /* Remove default padding */
+    width: 100%;
+    height: 80%;
     margin: 0; /* Remove default margin */
     background-color: #ffffff; /* Set background color */
     border-radius: 10px; /* Set border radius */
+    translate: 0px 80px;
 }
 
 #pathList li {
@@ -223,6 +222,7 @@ aside {
 #pathList li button {
     display: block; /* Make it a block element */
     width: 100%; /* Set width to fill the container */
+    height: 100%;
     padding: 15px; /* Set padding */
     border: none; /* Remove default border */
     background-color: #ffffff; /* Set background color */
@@ -280,6 +280,7 @@ aside {
     margin-left: 100%;
     margin-right:15%;
     padding: 20px; /* Add padding to the form */
+    translate: 1100px 0px;
     background-color: #f2f2f2; /* Set form background color */
     border-radius: 10px; /* Set form border radius */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add form shadow */
