--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -1,12 +1,21 @@
 /* General Styles */
 
+
+.gradiante {
+    background-image: linear-gradient(to top, #801e1e 2%, #000000);
+    height: 100vh; /* Establece la altura al 50% del viewport height */
+    width: 100vw; /* Establece el ancho al 80% del viewport width */
+    position:fixed;
+    left: 15%;
+}
+
 /* Path */
 #path {
     position: absolute; /* Position the path element absolutely */
     top: 0; /* Align to the top */
     left: 0; /* Align to the left */
     width: 100%; /* Take full width of the viewport */
-    height: 100%; /* Take full height of the viewport */
+    height: 100%; /* Take full height of the viewport */    
 }
 
 /* Header Styles */
@@ -85,7 +94,7 @@ aside {
     min-width: 60px; /* Set minimum width */
     max-width: 15%; /* Set maximum width */
     height: 100%; /* Take full height */
-    background-image: linear-gradient(to top, #801e1e, #000000);
+    background-image: linear-gradient(to top, #801e1e 2%, #000000);
     position: fixed; /* Position fixed */
 }
 
@@ -164,10 +173,16 @@ aside {
 }
 
 /* Search and Social */
-.search-social {
-    text-align: right; /* Align text to the right */
-    margin-top: 20px; /* Add top margin */
-}
+
+.search-social{
+    margin-top: 0%;
+    width: 20%;
+    height: 5%;
+    position: absolute;
+    top: 5%;
+    left: 65%;
+
+ }
 
 .search-social input {
     width: auto; /* Set width to auto */
@@ -197,8 +212,8 @@ aside {
     width: 600px;
     height: 500px;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 40%;
+    left: 35%;
     transform: translate(-50%, -50%);
     z-index: 90;
 }
@@ -209,7 +224,6 @@ aside {
     padding: 0; /* Remove default padding */
     margin: 0; /* Remove default margin */
     position: relative;
-    top: 10%;
     background-color: #ffffff; /* Set background color */
     border-radius: 10px; /* Set border radius */
     translate: 0px 80px;
@@ -241,13 +255,4 @@ aside {
     border-bottom: none; /* Remove bottom border from last item */
 }
 
- .search-social{
-    margin-top: 0%;
-    width: 20%;
-    height: 5%;
-    position: absolute;
-    top: 18%;
-    left: 70%;
-    right: 20%;
- }
 
