centrar los elmentos del main

--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -205,10 +205,10 @@ ul.dropdown-menu li a {
 #map {
     width: 25vw;
     height: calc(40vw * 9/16);  
-    position: absolute;
+    position: fixed;
     left: 35%;
     z-index: 90;
-    top: 30%; /* Centra verticalmente */
+
 }
 
 /* Styles for Path List Buttons */
@@ -458,7 +458,7 @@ transition:0.6s;
 
 /*Rectángulo con información*/
 .rectangle {
-  background-color: white;
+  background-color: rgba(73, 7, 7, 0.0);;
   border-radius: 10px; /* Adjust the value to change the roundness */
   padding: 20px; /* Add padding to give space for text */
   width: 25vw;
@@ -466,7 +466,7 @@ transition:0.6s;
   position: fixed; /* Position it relative to the viewport */
   right: 10%;
   z-index: 90;
-  top: 43%; /* Centra verticalmente */
+  top: 45%; /* Centra verticalmente */
   display: flex; /* Use flexbox */
   flex-direction: column; /* Arrange children vertically */
   justify-content: center; /* Center content vertically */
@@ -477,10 +477,11 @@ transition:0.6s;
   font-weight: bold; /* Make the title bold */
   margin-bottom: 10px; /* Add space between title and content */
   font-size: 2vw; /* Adjust font size based on viewport width */
+  color:#f5f3f3;
 }
 
 .rectcontent {
-  color: #080808; /*Color del texto*/
+  color: #f5f3f3; /*Color del texto*/
   font-size: 1.5vw; /* Adjust font size based on viewport width */
 }
 
@@ -495,7 +496,7 @@ transition:0.6s;
   overflow: hidden;
   right: 69%; /* Adjust to position it to the left */
   z-index: 90; /* Ensure it's above other content */
-  top: 43%; /* Center vertically */
+  top: 50%; /* Center vertically */
 }
 
 /* Slider list styles */
@@ -566,6 +567,13 @@ transition:0.6s;
 /* Active dot style */
 .slide-slider .slide-dots li.active {
   width: 30px; /* Increase size of active dot */
+}
+
+.rectangle,
+.slide-slider,
+#map {
+  top: 70%;
+  transform: translateY(-50%);
 }
 
 @media screen and (max-width: 25vw){
