--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -396,7 +396,8 @@ width: 156px; }
   margin-bottom: 11px; }
 .hex-content .title {
   display: block;
-  font-family: "Nova Cut", system-ui;
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
   font-size: 14px;
   letter-spacing: 1px;
   line-height: 24px;
@@ -485,11 +486,15 @@ transition:0.6s;
   margin-bottom: 10px; /* Add space between title and content */
   font-size: 2vw; /* Adjust font size based on viewport width */
   color:#f5f3f3;
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
 }
 
 .rectcontent {
   color: #f5f3f3; /*Color del texto*/
   font-size: 1.5vw; /* Adjust font size based on viewport width */
+  font-family: "Merriweather", serif;
+  text-align: justify;
 }
 
 /*------------------------------------------------
